...
  <string name="play_restrict_range">Only play the above verses</string>
  <string name="play_verses_range">Play set of verses:</string>
  <string name="play_each_verse">Play each verse:</string>
  <string name="play_apply">Apply</string>
  <string name="play_apply_and_play">Apply and Play</string>
  <string name="previous">Previous</string>
  <string name="play">Play</string>
  <string name="pause">Pause</string>
  <string name="stop">Stop</string>
  <string name="next">Next</string>
  <string name="playback_speed">Playback Speed:</string>

  <string-array name="repeatValues">
    <item>1 time</item>
    <item>2 times</item>
...
